--- a/src/components/create-note/create-note.css
+++ b/src/components/create-note/create-note.css
@@ -1,18 +1,28 @@
 .container {
-  width: 400px;
+  width: 600px;
   border: 1px solid grey;
+  box-shadow: 0px 3px 9px 0px rgba(0,0,0,0.6);
+  background-color: white;
+  margin: auto;
 }
 
 .title {
   composes: textInput from "styles/composables.css";
   width: 100%;
   font-weight: bold;
+  font-size: 14px;
 }
 
 .body {
   composes: textInput from "styles/composables.css";
   width: 100%;
   resize: none;
+  border: none;
+  font-size: 14px;
+}
+
+.controls {
+  text-align: right;
 }
 
 .hidden {
