--- a/src/components/note/note.css
+++ b/src/components/note/note.css
@@ -1,11 +1,15 @@
-.note {
+.container {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.content {
   background-color: white;
   border: 1px solid black;
   box-shadow: 2px 3px 8px 0px rgba(0,0,0,0.75);
   width: 200px;
   min-height: 350px;
   float: left;
-  margin-right: 20px;
   position: relative;
   cursor: pointer;
   z-index: 2;
@@ -42,7 +46,7 @@
   display: none;
 }
 
-.notClone {
+.isClone {
   position: absolute;
   z-index: 1;
   transition: transform 0.5s;
