--- a/src/components/edit-note/edit-note.css
+++ b/src/components/edit-note/edit-note.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 10;
 }
 
 .editor {
@@ -17,6 +18,7 @@
   transform: translate(0px,-150px);
   padding: 10px;
   box-sizing: border-box;
+  z-index: 11;
 }
 
 .title {
