--- a/src/styles/composables.css
+++ b/src/styles/composables.css
@@ -5,3 +5,24 @@
   resize: none;
   word-break: break-word;
 }
+
+.button a {
+  font-family: 'Oswald';
+  text-decoration: none;
+  margin: 5px;
+}
+
+.button a {
+  color: black;
+  text-decoration: none;
+}
+
+.button a:link {
+  color: black;
+  text-decoration: none;
+}
+
+.button a:visited {
+  color: black;
+  text-decoration: none;
+}
